更新wt下的静态文件

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -241,7 +241,7 @@
                                             <!--右侧图标位置/////////////////////////////////////////////////////////////-->
                                             <a class="b-goods__media js-zoom-images"
                                                href="assets/media/content/goods/group-4/2.jpg">
-                                                <img class="img-responsive" src="images/2_1.jpg" alt="img">
+                                                <img class="img-responsive" src="static/wt/images/2_1.jpg" alt="img">
                                             </a>
                                         </p>
                                     </div>
