修改评论页面

--- a/src/main/webapp/evaluate.html
+++ b/src/main/webapp/evaluate.html
@@ -265,7 +265,10 @@
                                     <div class="woocommerce-shipping-fields">
                                         <h3>上传买家秀图片</h3>
                                         <p class="form-row form-row">
-                                            <label class="">。。。上传图片模块。。。</label>
+                                            <!--<label class="">。。。上传图片模块。。。</label>-->
+                                            <!--<button class="btn btn-default btn-sm" type="button">send message</button>-->
+                                            <br><br>
+                                            <input type="file" name="i_Photos" id="upfilePhotoId" onchange="upfilePhoto()" required="required" >
                                             <!--上传买家图片/////////////////////////////////////////////////////////////-->
                                         </p>
                                     </div>
