引入mongodb组件，添加websocket的js文件

--- a/src/main/webapp/sellerService.html
+++ b/src/main/webapp/sellerService.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>客服</title>
+    <script src="static/jq/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="static/jq/webSocket/sock_js.js" type="text/javascript"></script>
+    <script src="static/jq/webSocket/stomp.js" type="text/javascript"></script>
+    <script src="static/jq/webSocket/update.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var webSocket = null;
+        if ('WebSocket' in window) {
+            //Websocket的连接
+            webSocket = new WebSocket("ws://localhost:8080/webSocket");//WebSocket对应的地址
+        }
+        else if ('MozWebSocket' in window) {
+            //Websocket的连接
+            webSocket = new MozWebSocket("ws://localhost:8080/webSocket");//SockJS对应的地址
+        }
+        else {
+            //SockJS的连接
+            webSocket = new SockJS("ws://localhost:8080/webSocket");    //SockJS对应的地址
+        }
+        webSocket.onmessage = onMessage;
+        webSocket.onerror = onError;
+
+        function onMessage(response) {
+            var ta = document.getElementById('responseContext');
+            console.log(response.data);
+            var msg = $.parseJSON(response.data);
+            ta.value += 'from ' + msg.fromId + ' ' + msg.time + '\n' + msg.message + '\n'
+        }
+
+        function onError() {
+        }
+
+    </script>
     <style type="text/css">
         .area{
             width: 95%;
