--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,7 +132,7 @@
     <script type="text/javascript">
         function  upfilePhoto() {
             $.ajaxFileUpload({
-                url:"upFile",
+                url:"upFile1",
                 secureuri:false,//是否启动安全提交，默认为false
                 fileElementId:"upfilePhotoId",//需要上传的文件ID
                 dataType:'text',
