订单页面修改好了

--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -235,7 +235,6 @@
                             <div class="tab-content">
                                 <div class="tab-pane fade in active" id="yet">
                                     <div class="b-table b-cart-table ">
-                                        <!--未完成订单表格-->
                                         <table class="shop_table shop_table_responsive cart table" cellspacing="0">
                                             <thead>
                                             <tr>
@@ -419,7 +418,7 @@
 
                                                 <td class="product-remove">
 
-                                                    <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                    <!--查看订单/确认收货模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a><br><br><a href="/">确认收货</a>
                                                 </td>
                                             </tr>
@@ -468,7 +467,7 @@
 
                                                 <td class="product-remove">
 
-                                                    <!--查看订单/评价订单模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                    <!--查看订单/确认收货模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a><br><br><a href="/">确认收货</a>
 
                                                 </td>
@@ -486,7 +485,6 @@
                                 <!--待评价模块///////////////////////////////////////////////////////////////////////////////////////-->
                                 <div class="tab-pane fade" id="toEvaluate">
                                     <div class="b-table b-cart-table ">
-                                        <!--待评价订单表格-->
                                         <table class="shop_table shop_table_responsive cart table" cellspacing="0">
                                             <thead>
                                             <tr>
@@ -519,7 +517,7 @@
 							<span class="product-price total-price">
                                     <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
 							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span>						    </span>
+                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span></span>
                                                 </td>
 
                                                 <td data-title="Product">
@@ -538,7 +536,7 @@
 
                                                 <td class="product-remove" width="100">
 
-                                                    <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                    <!--查看订单/评价模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/">评价</a></td>
                                             </tr>
 
@@ -580,7 +578,7 @@
 
                                                 <td class="product-remove" width="100">
 
-                                                    <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                    <!--查看订单/评价模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/">评价</a></td>
                                             </tr>
                                             </tbody>
@@ -608,7 +606,6 @@
                                                 <td class="product-price"><h5>总 价 格</h5></td>
                                                 <td class="product-price"><h5>邮寄方式</h5></td>
                                                 <td class="product-price"><h5>评价状态</h5></td>
-                                                <!--<td class="product-price"><h5>我的留言</h5></td>-->
                                                 <td class="product-remove"><h5>操 作</h5></td>
                                             </tr>
                                             </thead>
@@ -722,7 +719,6 @@
                                                 <td class="product-price"><h5>总 价 格</h5></td>
                                                 <td class="product-price"><h5>邮寄方式</h5></td>
                                                 <td class="product-price"><h5>订单状态</h5></td>
-                                                <!--<td class="product-price"><h5>我的留言</h5></td>-->
                                                 <td class="product-remove"><h5>操 作</h5></td>
                                             </tr>
                                             </thead>
@@ -813,7 +809,6 @@
                                             </tr>
                                             </tbody>
                                         </table>
-
                                     </div>
 
                                     <div class="form-row place-order">
