--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -132,14 +132,14 @@
                     </button>
                     <!-- Desctop Trigger End-->
                     <ul class="main-menu yamm nav navbar-nav">
-                        <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop-1.html"><h5>主 页</h5></a>
+                        <!--主页模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="home.html"><h5>主 页</h5></a>
                         </li>
-                        <!--售后入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop.html"><h5>售 后</h5></a>
+                        <!--售后模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="order_over.html"><h5>售 后</h5></a>
                         </li>
-                        <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop-1.html"><h5>收 藏</h5></a>
+                        <!--收藏夹模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="collection.html"><h5>收 藏</h5></a>
                         </li>
                     </ul>
                 </div>
@@ -147,27 +147,24 @@
                     <ul class="nav navbar-nav clearfix vcenter">
                         <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                         </li>
-                        <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="#"><h5>我 的 微 淘</h5></a>
+                        <!--用户个人信息模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="order.html"><h5>我 的 订 单</h5></a>
                         </li>
                         <li><span class="header-cart">
-
-                            <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                <a href="#"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                            <!--购物车///////////////////////////////////////////////////////////////////////////////////////-->
+                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
                                     <span class="header-cart-count bg-primary">3</span></span>
                         </li>
                     </ul>
                     <ul class="nav-language list-inline">
                         <!--登陆后的用户名展示///////////////////////////////////////////////////////////////////////////////////////-->
-                        <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
-                        <li><a href="#">Id：007</a>
+                        <li><a href="display.html">Id：007</a>
                         </li>
-                        <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li class="active"><a href="#">quit</a>
+                        <!--退出按钮///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li class="active"><a href="login.html">quit</a>
                         </li>
                     </ul>
                     <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
-                    <!--点击，重新进入主页/////////////////////////////////////////////////////////////-->
                     <a class="navbar-brand scroll" href="home.html">
                         <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
                         <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
