--- a/src/main/webapp/change_password.html
+++ b/src/main/webapp/change_password.html
@@ -158,7 +158,7 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="shop-1.html"><h5>主 页</h5></a>
+                            <li><a href="home.html"><h5>主 页</h5></a>
                             </li>
                             <li><a href="shop-1.html"><h5>加入我们</h5></a>
                             </li>
@@ -172,7 +172,7 @@
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="#"><h5>个人信息</h5></a>
+                            <li><a href="display.html"><h5>个人信息</h5></a>
                             </li>
                             <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -181,9 +181,9 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="#">登陆</a>
+                            <li><a href="login.html">登陆</a>
                             </li>
-                            <li><a href="#">返回</a>
+                            <li><a href="home.html">返回</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -205,7 +205,7 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>修改密码/忘记密码?</h4></a>
+                            <li><h4>修改密码/忘记密码?</h4>
                             </li>
                         </ol>
                     </div>
@@ -270,7 +270,10 @@
                                         <h3>淘 不出掌心</h3>
                                         <p class="form-row form-row">
                                             <label class="">这里放微淘的骚粉大LOGO</label>
-                                            <!--上传头像模块，u_icon/////////////////////////////////////////////////////////////-->
+                                            <!--LOGO模块/////////////////////////////////////////////////////////////-->
+                                            <div style="width:500px ;height: 500px">
+                                        <img src="static/wt/images/pink.jpg">
+                                    </div>
                                         </p>
                                     </div>
                                 </div>
@@ -407,3 +410,4 @@
 <script src="static/wt/js/main.js"></script>
 </body>
 </html>
+<!--还没修改完-->
