--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -134,13 +134,13 @@
                     <!-- Desctop Trigger End-->
                     <ul class="main-menu yamm nav navbar-nav">
                         <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop-1.html"><h5>主 页</h5></a>
+                        <li><a href="home.html"><h5>主 页</h5></a>
                         </li>
                         <!--售后入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop.html"><h5>售 后</h5></a>
+                        <li><a href="order_over.html"><h5>售 后</h5></a>
                         </li>
                         <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="shop-1.html"><h5>收 藏</h5></a>
+                        <li><a href="collection-1.html"><h5>收 藏</h5></a>
                         </li>
                     </ul>
                 </div>
@@ -149,22 +149,22 @@
                         <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                         </li>
                         <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="#"><h5>我 的 微 淘</h5></a>
+                        <li><a href="order.html"><h5>我 的 订 单</h5></a>
                         </li>
                         <li><span class="header-cart">
 
                             <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                <a href="#"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
                                     <span class="header-cart-count bg-primary">3</span></span>
                         </li>
                     </ul>
                     <ul class="nav-language list-inline">
                         <!--登陆后的用户名展示///////////////////////////////////////////////////////////////////////////////////////-->
                         <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
-                        <li><a href="#">Id：007</a>
+                        <li><a href="display.html">Id：007</a>
                         </li>
                         <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li class="active"><a href="#">quit</a>
+                        <li class="active"><a href="login.html">quit</a>
                         </li>
                     </ul>
                     <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
@@ -484,8 +484,7 @@
                                 <!--第一个商品展示，宽3，高4///////////////////////////////////////////////////////////////////////////////////////-->
                                 <div class="col-md-3 col-sm-4">
                                     <div class="b-goods b-goods-4">
-                                        <a class="b-goods__media js-zoom-images"
-                                           href="assets/media/content/goods/group-4/1.jpg">
+                                        <a href="shop_single.html?iId=8000003" >
                                             <img class="img-responsive" src="static/wt/images/1_2.jpg" alt="img">
                                         </a><span class="b-goods__main"><span class="b-goods__inner"><span
                                             class="b-goods__categorie">Junya Watanabe MAN</span><a
@@ -508,8 +507,7 @@
                                 <div class="col-md-3 col-sm-6">
                                     <!--第一个商品展示，宽3，高4///////////////////////////////////////////////////////////////////////////////////////-->
                                     <div class="b-goods b-goods-4">
-                                        <a class="b-goods__media js-zoom-images"
-                                           href="assets/media/content/goods/group-4/4.jpg">
+                                        <a href="shop_single.html" >
                                             <img class="img-responsive" src="static/wt/images/4.jpg" alt="img">
                                         </a><span class="b-goods__main"><span class="b-goods__inner"><span
                                             class="b-goods__categorie">Undercover</span><a class="b-goods__title"
