--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -158,13 +158,13 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--主页模块///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="shop-1.html"><h5>主 页</h5></a>
+                            <li><a href="home.html"><h5>主 页</h5></a>
                             </li>
                             <!--售后模块///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="shop-2.html"><h5>售 后</h5></a>
+                            <li><a href="order_over.html"><h5>售 后</h5></a>
                             </li>
                             <!--收藏夹模块///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="shop-1.html"><h5>收 藏</h5></a>
+                            <li><a href="collection.html"><h5>收 藏</h5></a>
                             </li>
                         </ul>
                     </div>
@@ -173,20 +173,20 @@
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
                             <!--用户个人信息模块///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="#"><h5>我 的 微 淘</h5></a>
+                            <li><a href="order.html"><h5>我 的 订 单</h5></a>
                             </li>
                             <li><span class="header-cart">
                             <!--购物车///////////////////////////////////////////////////////////////////////////////////////-->
-                                <a href="#"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
                                     <span class="header-cart-count bg-primary">3</span></span>
                             </li>
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--登陆后的用户名展示///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="#">Id：007</a>
+                            <li><a href="display.html">Id：007</a>
                             </li>
                             <!--退出按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li class="active"><a href="#">quit</a>
+                            <li class="active"><a href="login.html">quit</a>
                             </li>
                         </ul>
                         <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
@@ -231,7 +231,7 @@
                                 <li><a href="#afterSale" data-toggle="tab">售后</a>
                                 </li>
                             </ul>
-<!--待发货模块///////////////////////////////////////////////////////////////////////////////////////-->
+                            <!--待发货模块///////////////////////////////////////////////////////////////////////////////////////-->
                             <div class="tab-content">
                                 <div class="tab-pane fade in active" id="yet">
                                     <div class="b-table b-cart-table ">
@@ -610,36 +610,29 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-
                                             <tr class="cart_item">
-
-
                                                 <td class="product-thumbnail">
-
                                                     <!--订单号，点击可以查看订单详情///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="">666666</a></td>
-
                                                 <td data-title="Product">
                                                     <!--下单时间模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <div class="caption">
                                                         2018-09-09
                                                     </div>
                                                 </td>
-
                                                 <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span>						    </span>
+                                                    <span class="product-price total-price">
+                                                        <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                        <span class="woocommerce-Price-amount amount">
+                                                            <span class="woocommerce-Price-currencySymbol">£</span>875.00</span>
+                                                    </span>
                                                 </td>
-
                                                 <td data-title="Product">
                                                     <!--邮寄方式模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <div class="caption">
                                                         快递
                                                     </div>
                                                 </td>
-
                                                 <td data-title="Product">
                                                     <!--订单状态模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <div class="caption">
@@ -648,33 +641,27 @@
                                                 </td>
 
                                                 <td class="product-remove" width="100">
-
                                                     <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a></td>
                                             </tr>
 
                                             <tr class="cart_item">
-
-
                                                 <td class="product-thumbnail">
-
                                                     <!--订单号，点击可以查看订单详情///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="catalog-product.html">777777</a></td>
-
                                                 <td data-title="Product">
                                                     <!--下单时间模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <div class="caption">
                                                         2018-06-06
                                                     </div>
                                                 </td>
-
                                                 <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>876.00</span>						    </span>
+                                                    <span class="product-price total-price">
+                                                        <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                        <span class="woocommerce-Price-amount amount"><span
+                                                                class="woocommerce-Price-currencySymbol">£</span>876.00</span>
+                                                    </span>
                                                 </td>
-
                                                 <td data-title="Product">
                                                     <!--邮寄方式模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <div class="caption">
@@ -688,9 +675,7 @@
                                                         已评价
                                                     </div>
                                                 </td>
-
                                                 <td class="product-remove" width="100">
-
                                                     <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
                                                     <a href="/">查看</a></td>
                                             </tr>
@@ -729,14 +714,14 @@
 
                                                 <td class="product-thumbnail">
 
-                                                    <!--订单号，点击可以查看订单详情///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <a href="">666666</a></td>
+                                                    <!--订单号模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                                    666666</td>
 
                                                 <td data-title="Product">
                                                     <!--下单时间模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <div class="caption">
+
                                                         2018-09-09
-                                                    </div>
+
                                                 </td>
 
                                                 <td class="product-price" data-title="Price">
@@ -766,47 +751,6 @@
                                                     <a href="/">查看</a></td>
                                             </tr>
 
-                                            <tr class="cart_item">
-
-
-                                                <td class="product-thumbnail">
-
-                                                    <!--订单号，点击可以查看订单详情///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <a href="catalog-product.html">777777</a></td>
-
-                                                <td data-title="Product">
-                                                    <!--下单时间模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <div class="caption">
-                                                        2018-06-06
-                                                    </div>
-                                                </td>
-
-                                                <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品总价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>876.00</span>						    </span>
-                                                </td>
-
-                                                <td data-title="Product">
-                                                    <!--邮寄方式模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <div class="caption">
-                                                        平邮
-                                                    </div>
-                                                </td>
-
-                                                <td data-title="Product">
-                                                    <!--订单状态模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <div class="caption">
-                                                        已评价
-                                                    </div>
-                                                </td>
-
-                                                <td class="product-remove" width="100">
-
-                                                    <!--查看订单模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                    <a href="/">查看</a></td>
-                                            </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -954,5 +898,3 @@
 </body>
 
 </html>
-
-
